# grab-docs

./: .gitignore  LICENSE  README.md  confluence_client.py  pyproject.toml
converters/: markdown_converter.py
grab_docs/: confluence_client.py  main.py
grab_docs/converters/: base_converter.py  html_converter.py  pdf_converter.py
md_docs/: 2022-10-13.md  2022-10-20.md  2022-12-08.md  2023-01-12.md  2023-02-27.md  2023-03-27.md  2023-04-18.md  2023-04-24.md  2023-05-15.md  2023-08-07.md  2023-09-07.md  2023-10-09.md  2023-10-17.md  2023-10-23.md  2023-11-20.md  2023-11-27.md  2023-12-04.md  2024-02-12.md  API Analysis.md  Base Price Algorithm Pricing Streams.md  CBP v27.md  Cyberport Architecture for Vouchers.md  DWH Autopricing.md  Data Service draft.md  Environments.md  Error Messages.md  Example API call valid voucher.md  Go Live review of MS7.md  How to manage CM emails table.md  IHS Requirements Engineering.md  IHS Technical Dependencies.md  Implementation timeline.md  Inventory Health Service IHS.md  KPI.md  MPS API Definition.md  MPS Algorithm.md  MPS Analytics and Metrics.md  MPS Customer Expectation.md  MPS Escalation Scenarios  Tutorials.md  MPS Internal Integration Points.md  (+59 more)
