[tool.poetry]
name = "confluence-exporter"
version = "0.1.0"
description = "Export Confluence spaces to various formats (HTML, PDF, Markdown)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "confluence_exporter"}]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
reportlab = "^4.0.4"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 